<resources>
    <string name="app_name">Movies Collection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_image">Poster Image</string>
    <string name="dfbdf">ksdkf ksd</string>
    <string name="overview">Overview</string>
    <string name="overviewtext">Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates — including an older prisoner named Red — for his integrity and unquenchable sense of hope.</string>
    <string name="tagline">Fear can hold you prisoner. Hope can set you free.</string>
    <string name="genre">Genre</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="production_companies">Production Companies</string>
    <string name="spoken_languages">Spoken Languages</string>
    <string name="adult_content">Adult Content</string>
    <string name="external_links">External Links</string>
    <string name="releaseDate">Release Date</string>
    <string name="runtime">Runtime</string>
    <string name="status">Status</string>
    <string name="homepage">Homepage</string>
    <string name="metascore">Metascore</string>
    <string name="imdb">IMDb</string>
    <string name="tmdb">TMDb</string>
    <string name="rating">Rating</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="openExt">Open External</string>
    <string name="belongsToCollection">Belongs To Collection</string>
    <string name="collection_poster">Collection Poster</string>
    <string name="go_to_collection">Go to Collection</string>
    <string name="simMov">Similar Movies</string>
    <string name="imdblogo">ImdbLogo</string>
    <string name="tomato_consensus">- Tomato Consensus</string>
    <string name="rated">Rated</string>
    <string name="awards">Awards</string>
    <string name="go_to_homepage">Go to Homepage</string>
    <string-array name="tabs">
        <item>Search</item>
        <item>Top rated</item>
        <item>about</item>
    </string-array>
</resources>
